--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../../static/css/admin.css">
 </head>
 
@@ -27,6 +28,13 @@
         <header class="topbar">
             <span class="menu-toggle" id="menu-toggle">☰</span>
             <h1 id="section-title">Dashboard</h1>
+            <div class="user-menu">
+                <i class="fas fa-user" style="padding: 10px; color: white;"></i>
+                <div class="user-dropdown">
+                    <div class="user-name">{{ user.first_name }} {{ user.last_name }}</div>
+                    <a href="/admin/logout">Logout</a>
+                </div>
+            </div>
         </header>
 
 
