--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -1,23 +1,35 @@
-{% extends "index.html" %}
-{% block content %}
-<div class="admin-login-wrap">
-  <div class="card admin-card">
-    <h2>Admin Login</h2>
-    {% if error %}
-      <div class="flash danger">{{ error }}</div>
-    {% endif %}
-    <form method="post" action="/admin/login" class="form">
-      <label>Username
-        <input name="username" required />
-      </label>
-      <label>Password
-        <input name="password" type="password" required />
-      </label>
-      <div class="actions">
-        <button class="btn primary" type="submit">Login</button>
-        <a class="btn secondary" href="/">Back to site</a>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login/Signup Form</title>
+     <link rel="stylesheet" href="../static/css/login.css">
+     <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="form-box login" style="width: 100%;">
+        <form action="/admin/login" method="POST">
+          <h1>Login</h1>
+          <div class="input-box">
+            <input type="text" name="email" placeholder="Username" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" name="password" placeholder="Password" required />
+            <i class="bx bxs-lock-alt"></i>
+          </div>
+         
+          <button type="submit" class="btn" style="width: 20%;">Login</button>
+          
+        </form>
       </div>
-    </form>
-  </div>
-</div>
-{% endblock %}
+
+    <script src="../static/js/login.js"></script>
+  </body>
+</html>
