--- a/templates/admin/admin_dashboard.html
+++ b/templates/admin/admin_dashboard.html
@@ -92,6 +92,7 @@
                             <th>S.N</th>
                             <th>User Name</th>
                             <th>Email</th>
+                            <th>Contact Number</th>
                             <th>Role</th>
                             <th>Action</th>
                         </tr>
