--- a/templates/login.html
+++ b/templates/login.html
@@ -85,6 +85,10 @@
             <i class="bx bxs-user"></i>
           </div>
           <div class="input-box">
+            <input type="text" name="contact_number" placeholder="Contact Number" required />
+            <i class="bx bxs-phone"></i>
+          </div>
+          <div class="input-box">
             <input type="email" name="email" placeholder="Email" required />
             <i class="bx bxs-envelope"></i>
           </div>
@@ -93,10 +97,6 @@
             <i class="bx bxs-lock-alt"></i>
           </div>
           <button type="submit" class="btn">Register</button>
-          <p>or register with social platforms</p>
-          <div class="social-icons">
-            <a href="#"><i class="bx bxl-google"></i></a>
-          </div>
         </form>
       </div>
 
