--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         <i class="fas fa-bars" id="menu-bars"></i>
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
-        <a href="{url_for('cart')}" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
-        <a href="login.html" class="fas fa-user"></a>
+        <a href="/cart" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
+        <a href="/login" class="fas fa-user"></a>
     </div>
 </header>
 
